--- a/test/HashCode.Test.UnitTests/HashCode.Test.UnitTests.csproj
+++ b/test/HashCode.Test.UnitTests/HashCode.Test.UnitTests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\HashCode.SharedKernel\HashCode.SharedKernel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
